--- a/00-G2-CS2B-FAI-April-2021/Question_3.Rmd
+++ b/00-G2-CS2B-FAI-April-2021/Question_3.Rmd
@@ -1,7 +1,22 @@
+---
+title: "Statistics with R"
+subtitle: "Introduction to R for Actuarial Students"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
+---
+
+
 3 Before answering this question, the ‘survival’ package should be loaded into R using 
 the following code: 
 install.packages("survival") 
 library(survival)
+
+---
+
 A recently developed drug, MediCo, has been used over the past 12 months to treat a 
 potentially fatal disease. MediCo was approved by a medical regulator last year 
 following initial trials and mortality data has been collected over the past 12 months, 
@@ -10,6 +25,9 @@ This mortality data has been compared with mortality data collected from infecte
 patients, prior to MediCo’s approval, who were NOT administered the drug. 
 It is suspected that gender may be a significant covariate on the mortality rate of 
 infected patients. 
+
+---
+
 The ‘CS2B_Apr_21_Qu_3_Data.csv’ file contains the combined mortality data from 
 this investigation for 4,400 infected patients. The file contains the following five 
 variables: 
@@ -25,41 +43,44 @@ range of 1–365, with 1 = first day of the investigation and
 Before answering this question, the ‘CS2B_Apr_21_Qu_3_Data.csv’ file should be 
 loaded into R and assigned to a data frame called mortalitydata. 
 
-Part 1
-===========================
+
+---
+
+## Part 1
+
 (i) Plot the Kaplan–Meier survival function estimate for all patients, together with 
 its two-sided 99.5% confidence interval. 
 
-Part 2
-===========================
+
+
+---
+
+### Part 2
+
 (ii) Determine, using the estimated survival function from part (i), the probability 
 that a patient survived from the beginning of the investigation to the end of the 
 investigation.
 
-Part 3
-===========================
+---
+
+### Part 3
+
 (iii) Evaluate the appropriateness of the probability value, calculated in part (ii), 
 for assessing MediCo’s effectiveness. 
+
+---
+
+### Part 4
+
 (iv) Plot, on a single graph, four Kaplan–Meier survival function estimates without 
 any confidence intervals, where each estimate represents one of the four 
 possible patient group combinations of drug and gender. You should use 
 separate colours to identify each survival function. 
+
+
+---
+
+### Part 5
+
 (v) Comment on the graph produced in part (iv).  
 
-
-Part 6
-===========================
-(vi) Estimate a Cox proportional hazards model with death as the event of interest 
-using the two covariates, drug and gender, with no interaction term, pasting 
-your results into your answer script. You should use the Breslow method for 
-tie handling. [5] 
-(vii) Comment on the results produced in part (vi) with reference to the effects of 
-the two covariates, drug and gender, on the mortality rate. [5]
-(viii) Update the Cox proportional hazards model in part (vi) to include an 
-interaction term between drug and gender, pasting your results into your 
-answer script. [3] 
-(ix) Analyse the effectiveness of MediCo, commenting on any differences between 
-males and females. [5] 
- [Total 44] 
-END OF PAPER
-END OF PAPER
