--- a/00-J1-CS1B-ASI-September-2021/Question_3.Rmd
+++ b/00-J1-CS1B-ASI-September-2021/Question_3.Rmd
@@ -1,8 +1,21 @@
+---
+title: "Statistics with R"
+subtitle: "Introduction to R for Actuarial Students"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
+---
+
 Solution 3:
 i) If X1, X2, …… Xn follows Bernoulli distribution with p = 0.5 (1)
 Then Y follows binomial distribution ~ Bin(n,p) as sum of independent Bernoulli distribution 
 results in binomial distribution with n trials and p is the probability of success. (1)
-[2]
+
+---
+
 ii) Since ‘n’ is not specified in the question, sample simulations of Y can be generated assuming any 
 value of ‘n’. The answer below is calculated using n = 10, however marks are allotted to 
 simulations of Y, calculated using any value of ‘n’.
@@ -14,10 +27,14 @@ Y
 Values of y from R (since these are random values, answers for each individual may vary from 
 the numbers stated below, please evaluate accordingly)
 5 4 4 5 2 6 5 4 2 5 (2)
+---
+
 iii) The sample simulated in part (ii) are representative value of variable Y itself. Hence, no further 
-calculation required to assess the value of variable Y. (2)
+calculation required to assess the value of variable Y. 
+---
+
 iv) dbinom (4,n,p)
 The solution is based on assumption that n = 10 (as assumed in part(ii)). Marks are allotted to 
 solutions calculated using any value for “n”.
-0.2050781 (1)
-[7 Marks]
+0.2050781 
+
