--- a/00-J1-CS1B-ASI-September-2021/Question_6.Rmd
+++ b/00-J1-CS1B-ASI-September-2021/Question_6.Rmd
@@ -1,3 +1,14 @@
+---
+title: "Statistics with R"
+subtitle: "Introduction to R for Actuarial Students"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
+---
+
 Solution 6:
 i) H0 – Company1 and Company2 having equal variance (i.e., ratio of variance =1)
 H1 – There is a difference in variance between Company1 and Company2.
@@ -13,12 +24,14 @@ alternative hypothesis: true ratio of variances is not equal to 1
 sample estimates:
 ratio of variances 
  0.9138781
-IAI CS1B-0921
-Page 8 of 15
+---
+
 Conclusion – As the confidence interval for the ratio between variance includes 1, we do not 
 have enough evidence to reject H0 at 5% significance level. Hence, we can conclude that ratio of 
 variance between Company1 and Company2 is 1 i.e., Company1 and Company2 having equal 
 variance at 5% significance level. (4)
+
+---
 ii) H0 – No difference in mean premium charged by Company1 and Company2. 
 H1 – difference in mean premium charged by Company1 and Company2.
 t.test(Company1, Company2, var.equal = TRUE, conf=0.95)
@@ -31,10 +44,16 @@ alternative hypothesis: true difference in means is not equal to 0
 sample estimates:
 mean of x mean of y 
  1669 1725
+ 
+---
 Conclusion – As the confidence interval for the difference in mean premium includes 0, we do 
 not have enough evidence to reject H0 at 5% significance level. Hence, we can conclude that 
 there is no difference between mean premium charged by Company1 and Company2 at 5% 
 significance level. (4)
+
+
+---
+
 iii) H0 – mean premium charged by Company2 is INR 1500. 
 H1 – mean premium charged by Company2 is greater than 1500.
 t.test(Company2, mu=1500, alternative= c("greater"), conf=0.95)
@@ -47,6 +66,9 @@ alternative hypothesis: true mean is greater than 1500
 sample estimates:
 mean of x 
  1725
+
+---
+ 
 Conclusion – As the confidence interval for the mean premium does not include 1500, at 5% 
 significance level we have enough evidence to reject null hypothesis. 
 (p-value less than 5% also confirms that we have enough evidence to reject null hypothesis at 
@@ -69,10 +91,16 @@ alternative hypothesis: two.sided
 sample estimates:
 prop 1 prop 2 
  0.3 0.5
+ 
+ ---
+ 
 Conclusion – As the confidence interval does not include 0 (or as p-value is less than 5%), we 
 have sufficient evidence to reject null hypothesis at 5% significance level. Hence, we can 
 conclude that there is difference in proportion of (policies that result in) claims between 
-Company1 and Company2 at 5% significance level. (4)
+Company1 and Company2 at 5% significance level. 
+
+---
+
 v) H0 – There is no difference in ratio of claim frequency between group1 and other groups in 
 Company2. 
 H1 – Claim frequency of group1 is less than other groups in Company2.
