--- a/00-J2-CS2B-ASI-September-2021/Question_2.Rmd
+++ b/00-J2-CS2B-ASI-September-2021/Question_2.Rmd
@@ -1,3 +1,14 @@
+---
+title: "Statistics with R"
+subtitle: "Introduction to R for Actuarial Students"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
+---
+
 Solution 2:
 set.seed(1234)
 options(scipen=5)
@@ -5,23 +16,33 @@ options(scipen=5)
 shape<-1.5
 scale<-100000
 WeibullSim<-rweibull(1000,shape,scale) [3M]
+
+---
+
 # (ii)
 SimMean<-mean(WeibullSim)
 SimMean
 ## [1] 89244.03
 SimSD<-sd(WeibullSim)
 SimSD [2M]
-IAI CS2B-0921
-Page 3 of 13
+
+---
+
 ## [1] 62717.89
 # (iii)
 mu<-log(SimMean/(1+SimSD^2/SimMean^2)^0.5)
 mu
 ## [1] 11.19844
+
+---
+
 sigma<-log(1+SimSD^2/SimMean^2)^0.5
 sigma
 ## [1] 0.6335449 [5M]
 # (iv)
+
+---
+
 LogNormalSim<-rlnorm(1000,mu,sigma)
 mean(LogNormalSim)
 ## [1] 86421.17
@@ -32,8 +53,10 @@ SimResults<-as.data.frame(cbind(WeibullSim,LogNormalSim))
 hist(WeibullSim, breaks = 30)
 hist(LogNormalSim, breaks = 30) [3M]
 IAI CS2B-0921
-Page 4 of 13
+
+---
+
 # (vi)
 plot(density(WeibullSim),type = "l",col="red",ylim = c(0,0.00001))
-lines(density(LogNormalSim),col="green") [3M]
- [21 Marks]
+lines(density(LogNormalSim),col="green") 
+
