--- a/00-J2-CS2B-ASI-September-2021/Question_4.Rmd
+++ b/00-J2-CS2B-ASI-September-2021/Question_4.Rmd
@@ -1,3 +1,15 @@
+---
+title: "Statistics with R"
+subtitle: "Introduction to R for Actuarial Students"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
+---
+
+
 Solution 4:
 library(tseries)
 ## Warning: package 'tseries' was built under R version 4.0.5
