--- a/00-J1-CS1B-ASI-September-2021/Question_1.Rmd
+++ b/00-J1-CS1B-ASI-September-2021/Question_1.Rmd
@@ -9,6 +9,16 @@ output:
       countIncrementalSlides: false
 ---
 
+----
+
+Q. 1) Assume X is a random variable which follows Poi (2) where X = 1,2,3,4,5,6,7,8,9,10 i.e. 
+values from 1 to 10
+i) Calculate the probability for each of the values of X. (2)
+ii) Calculate the cumulative probability for each of the values of X. (2)
+iii) Plot a graph of the distribution function of X. (1)
+[5]
+
+----
 
 Solution 1:
 X = c(1:10)
@@ -18,11 +28,17 @@ i) dpois (x, Lambda)
 >>Outcome:
 2.706706e-01 2.706706e-01 1.804470e-01 9.022352e-02 3.608941e-02 1.202980e-02 
 3.437087e-03 8.592716e-04 1.909493e-04 3.818985e-05 (1.5)
-ii) ppois (x, Lambda)
+
 ---
+
+ii) ppois (x, Lambda)
+
 >> Outcome
 0.4060058 0.6766764 0.8571235 0.9473470 0.9834364 0.9954662 0.9989033 0.9997626 
 0.9999535 0.9999917 (1.5)
+
+---
+
 iii) plot (ppois(x,Lambda)
 (1)
 [5 Marks]
